metadata/force-app/main/default/objects/CustomName_OTBHK__c/CustomName_OTBHK__c.object-meta.xml
<CustomObject>
    <description>Description_Axwbb</description>
    <label>CustomLabel_nTbzd</label>
    <nameField>
        <label>CustomLabel_nTbzd</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_nTbzds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>