metadata/force-app/main/default/objects/CustomName_OTBHK__c/fields/CustomField_Gbmvi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Gbmvi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddfRwr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>